[package]
name = "rusty_mara"
version = "0.1.0"
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["bit32", "condition"]
bit32 = []
bit16 = []
bit8 = []
condition = []
statistic = []